<resources>
    <string name="app_name">DepressionDetector</string>
    <string name="title_activity_authentication">Get started</string>
    <string name="title_activity_login">@string/login</string>
    <string name="title_activity_sign_up">@string/sign_up</string>
    <string name="title_activity_main">Statistics</string>
    <string name="title_activity_profile">@string/profile</string>
    <string name="title_activity_settings">@string/settings</string>
    <string name="title_activity_first_configuration">What should we analyse?</string>

    <!-- Main Activity -->
    <string name="get_results">Get results</string>

    <!-- Main Activity Fragments -->
    <string name="main_dashboard">Dashboard</string>
    <string name="main_phone_calls_results">Phone Calls</string>
    <string name="main_text_messages_results">Text Messages</string>
    <string name="main_mood_results">Mood</string>

    <string name="offline_mode">OFFLINE MODE</string>
    
    <!-- Dashboard Fragment -->
    <string name="voice_diary">Voice Diary</string>
    <string name="text_diary">Text Diary</string>

    <string name="record_button">Record</string>
    <string name="write_button">Write</string>

    <string name="overview_chart">Average Results</string>

    <!-- Main Activity Fragments Chart Types -->
    <string name="main_chart_last_week">Last Week</string>
    <string name="main_chart_last_month">Last Month</string>
    <string name="main_chart_last_year">Last Year</string>
    <string name="main_chart_all">All</string>
    <string-array name="main_chart_types">
        <item>@string/main_chart_last_week</item>
        <item>@string/main_chart_last_month</item>
        <item>@string/main_chart_last_year</item>
        <item>@string/main_chart_all</item>
    </string-array>

    <!-- Voice Diary Activity -->
    <string name="voice_diary_activity_title">Voice Diary</string>
    <string name="info_recording">Recording…</string>

    <string name="pause_button">Pause</string>
    <string name="resume_button">Resume</string>

    <string name="recording_cancelled">Recording has been canceled</string>
    <string name="recording_paused">Paused</string>
    <string name="recording_resumed">Resumed</string>
    <string name="recording_saved">Recording has been saved</string>

    <!-- Text Diary Activity -->
    <string name="text_diary_activity_title">Text Diary</string>
    <string name="hint_text_diary">Write here…</string>

    <string name="writing_cancelled">Writing a new diary entry has been canceled</string>
    <string name="writing_saved">A new diary entry has been saved</string>

    <!-- Authentication Activity -->
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>

    <!-- Sign Up and Login Activity -->
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_date_of_birth">Date of birth</string>
    <string name="change_password">Change password</string>
    <string name="email_password_sent">Check your email for further instructions</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>

    <string name="error_date_from_past">Date must be somewhere in the past</string>
    <string name="error_email_invalid">Email address is incorrect</string>
    <string name="error_field_empty">Field cannot be empty</string>
    <string name="error_network">Network error. Check your internet connection</string>
    <string name="error_login_exists">Login is already used. Try another one</string>
    <string name="error_email_exists">Email is already used. Try another one</string>
    <string name="error_email_does_not_exist">Email doesn\'t exist</string>
    <string name="error_password_invalid">Invalid password</string>
    <string name="error_timeout">Check your internet connection and try again</string>
    <string name="error_connection">Connection error</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_internal">Internal error</string>

    <!-- ProfileActivity -->
    <string name="delete_successful">Delete successful</string>
    <string name="delete_message">You will be now logged out. To finish deleting account follow the instructions in email.</string>

    <!-- Mood -->
    <string name="mood_notification_title">Hey, how was your day?</string>
    <string name="mood_notification_text">Click to rate your mood</string>
    <string name="today_mood_rate_question">How was your mood today?</string>
    <string name="mood_awful">Awful</string>
    <string name="mood_bad">Bad</string>
    <string name="mood_so_so">So so</string>
    <string name="mood_good">Good</string>
    <string name="mood_rad">Rad</string>

    <!-- General -->
    <string name="ok">OK</string>
    <string name="or">Or</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="delete_account">Delete account</string>
    <string name="logout">Logout</string>
    <string name="go_further">Go further</string>

    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>

    <string name="unexpected_error">Unexpected error occurred</string>

    <!-- Preferences -->
    <string name="preferences_analysis">Analysis</string>
    <string name="preferences_analyse_mood">Mood</string>
    <string name="preferences_analyse_phone_calls">Phone calls</string>
    <string name="preferences_analyse_text_messages">Text messages</string>

    <string name="pref_user_username" translatable="false">pref_user_username</string>
    <string name="pref_user_password" translatable="false">pref_user_password</string>
    <string name="pref_user_email" translatable="false">pref_user_email</string>
    <string name="pref_user_sex" translatable="false">pref_user_sex</string>
    <string name="pref_user_date_of_birth" translatable="false">pref_user_date_of_birth</string>
    <string name="pref_analyse_mood" translatable="false">pref_analyse_mood</string>
    <string name="pref_analyse_phone_calls" translatable="false">pref_analyse_phone_calls</string>
    <string name="pref_analyse_text_messages" translatable="false">pref_analyse_text_messages</string>

</resources>
