<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context="pl.agh.depressiondetector.authentication.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_google_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/sign_up_with_google"
            android:textColor="#FFF" />

        <TextView
            android:id="@+id/textView_or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="35dp"
            android:gravity="center"
            android:text="@string/or" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_login">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditText_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditText_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditText_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1" />
        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:id="@+id/radioGroup_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_man"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/man" />

            <RadioButton
                android:id="@+id/radio_woman"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/woman" />
        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout_date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:hint="@string/hint_date_of_birth">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/textInputEditText_date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/sign_up"
            android:textColor="#FFF" />
    </LinearLayout>
</ScrollView>