<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:padding="10dp"
    tools:context="pl.agh.depressiondetector.authentication.LoginActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditText_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayout_username"
        android:hint="@string/hint_password"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/login"
        android:textColor="#FFF" />
</RelativeLayout>
