<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding"
    tools:context="pl.agh.depressiondetector.settings.FirstConfigurationActivity">

    <TextView
        android:id="@+id/textView_firstConfiguration_mood"
        style="@style/FirstConfigurationTextViewStyle"
        android:layout_toStartOf="@+id/switch_firstConfiguration_mood"
        android:drawableStart="@drawable/ic_mood"
        android:text="@string/preferences_analyse_mood" />

    <Switch
        android:id="@+id/switch_firstConfiguration_mood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView_firstConfiguration_mood"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView_firstConfiguration_mood"
        android:checked="true"
        android:padding="@dimen/default_padding" />

    <TextView
        android:id="@+id/textView_firstConfiguration_phoneCalls"
        style="@style/FirstConfigurationTextViewStyle"
        android:layout_below="@+id/textView_firstConfiguration_mood"
        android:layout_toStartOf="@+id/switch_firstConfiguration_phoneCalls"
        android:drawableStart="@drawable/ic_phone"
        android:text="@string/preferences_analyse_phone_calls" />

    <Switch
        android:id="@+id/switch_firstConfiguration_phoneCalls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView_firstConfiguration_phoneCalls"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView_firstConfiguration_phoneCalls"
        android:checked="true"
        android:padding="@dimen/default_padding" />

    <TextView
        android:id="@+id/textView_firstConfiguration_textMessages"
        style="@style/FirstConfigurationTextViewStyle"
        android:layout_below="@+id/textView_firstConfiguration_phoneCalls"
        android:layout_toStartOf="@+id/switch_firstConfiguration_phoneCalls"
        android:drawableStart="@drawable/ic_sms"
        android:text="@string/preferences_analyse_text_messages" />

    <Switch
        android:id="@+id/switch_firstConfiguration_textMessages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView_firstConfiguration_textMessages"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView_firstConfiguration_textMessages"
        android:checked="true"
        android:padding="@dimen/default_padding" />

    <Button
        android:id="@+id/button_firstConfiguration_goFurther"
        style="@style/ColorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/go_further"
        android:theme="@style/ColorButton" />
</RelativeLayout>
